--- a/Jegyzőkönyvek/1013.md
+++ b/Jegyzőkönyvek/1013.md
@@ -1,12 +1,12 @@
-## Jegyzőkönyv – 2025.10.13
+# Jegyzőkönyv – 2025.10.13
 
-#Résztvevők
+## Résztvevők
 - Házi Donát Zsolt
 - Kemecsei Márk
 - Fekete Domán Csaba
 - Péter Marcell
 
-#Megbeszélés témái
+## Megbeszélés témái
 - Angol frontend
 -	Use Case story elkészítése
 -	Képernyőtervek elkészítése
@@ -15,13 +15,13 @@
 -	Követelményspecifikáció: táblázat szerűen
 -	Követelmény lista
 
-#Feladatok
+##Feladatok
 -	Use Case story elkészítése
 -	Képernyőtervek elkészítése
 -	Rendszerterv update
 -	Követelményspecifikáció: táblázat szerűen
 -	Követelmény lista
 
-#Ötletek
+##Ötletek
 -	Animáció míg betöltenek az API hívásból a kérdések
 
