--- a/Jegyzőkönyvek/1110.md
+++ b/Jegyzőkönyvek/1110.md
@@ -1,3 +1,15 @@
 # Jegyzőkönyv - 2025.11.10.
 
-## 
+## Résztvevők
+- Fekete Domán
+- Kemecsei Márk
+- Házi Donát
+- Péter Marcell
+
+## Megbeszélés témái
+- Ranglista hibáinak javítása
+- Animációk hozzáadása
+
+## Ötletek
+- AI játékos
+- Tesztelés tervezése és elkezdése
