--- a/Jegyzőkönyvek/1116.md
+++ b/Jegyzőkönyvek/1116.md
@@ -1,1 +1,19 @@
 # Jegyzőkönyv - 2025.11.16.
+
+## Résztvevők
+- Házi Donát
+- Kemecsei Márk
+- Fekete Domán
+- Péter Marcell
+
+## Megbeszélés témái
+- szerencsekerék hibás működése
+- egyéb hibák
+- következő lépések a projektben
+
+## Döntések
+- szerencsekerék hibájának javítása
+- kisebb várakozási idő az első kérdés előtt
+
+## Ötletek
+- segítség lehetősége a játékosoknak (pl.: felezés)
